# TelegramAnonymousDating

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh  build_mds.sh  build_server.sh  package-lock.json  package.json  ubuntu_22_04_install_system_deps.sh
.github/workflows/: ci.yml
backend/: CMakeLists.txt
backend/lib/auth_lib/: CMakeLists.txt  README.md  auth.cpp  auth.h
backend/lib/server_config/: CMakeLists.txt  README.md  config.cpp  config.h
backend/lib/utils/: CMakeLists.txt  README.md  json_utils.cpp  json_utils.h
backend/mds/: CMakeLists.txt  README.md  main.cpp
backend/mds/aws_adapter/: adapter.cpp  adapter.h
backend/mds/config/: conf.json  config.cpp  config.h
backend/mds/handlers/: handlers.cpp  handlers.h
backend/server/: CMakeLists.txt  README.md  main.cpp
backend/server/common/: common_structures.cpp  common_structures.h
backend/server/config/: conf.json  config.cpp  config.h
backend/server/db_adapter/: adapter.cpp  adapter.h  redis.cpp  redis.h
backend/server/handlers/: account.cpp  handlers.h  register.cpp  search.cpp  update.cpp
backend/server/utils/: json_utils.cpp  json_utils.h
doc/: authentification.md  frontend.md  mds.md  server.md
doc/media/: server.md
frontend/tad_app/: Brewfile  package-lock.json  package.json
frontend/tad_app/public/: index.html
frontend/tad_app/src/: App.js
frontend/tad_app/src/menu/: header.js  menuForm.css  menuForm.js  stylemenu.css
frontend/tad_app/src/registration/: header.js  registrationForm.js  style.css
frontend/tad_app/src/search/: header.js  search.css  search.js
scripts/: create_tables.sh  prepare_server_env.sh  ubuntu_22_04_install_system_deps.sh
